# fitters_for_pyGrater

./: LICENSE  README.md  pyproject.toml
examples/: README.md  additive_sed_mcmc.py  single_sed_mcmc.py  single_sed_nested.py  single_sed_scipy.py
fitters_for_pyGrater/: __init__.py
fitters_for_pyGrater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fitters_for_pyGrater/fitters/: __init__.py  multi_component_fov_sed_mcmc.py  multi_component_sed_dynesty.py  multi_component_sed_mcmc.py  multi_component_sed_visibility_mcmc.py  single_ring_multi_composition_sed_dynesty.py  single_ring_sed_correlated_flux_dynesty.py  single_ring_sed_dynesty.py  single_ring_sed_interferometry_mcmc.py  single_ring_sed_interferometry_scipy.py  single_ring_sed_mcmc.py  single_ring_sed_scipy.py
fitters_for_pyGrater/utils/: __init__.py  analytical_visibilities.py  corner_plotting.py  dynesty_backend.py  emcee_backend_recovery.py  fitting.py  interferometry.py  mcmc_backend.py  mcmc_batch_plotting.py  mcmc_plotting.py  nested_plotting.py  parameter_handling.py
tests/: test_nested_sampling.py
